--- a/boot-demo/demo-boot-02-mysql/src/main/resources/application.properties
+++ b/boot-demo/demo-boot-02-mysql/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 ### MySQL ###
 #server.port=8082
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=${AZURE_MYSQL_URL}
 #spring.datasource.username=${AZURE_MYSQL_USERNAME}
 #spring.datasource.password=${AZURE_MYSQL_PASSWORD}
