--- a/webapp-demo/demo-01/pom.xml
+++ b/webapp-demo/demo-01/pom.xml
@@ -23,7 +23,12 @@
       <artifactId>junit</artifactId>  
       <version>4.11</version>  
       <scope>test</scope> 
-    </dependency> 
+    </dependency>
+    <dependency>
+      <groupId>com.microsoft.azure.applicationinsights.v2015_05_01</groupId>
+      <artifactId>azure-mgmt-insights</artifactId>
+      <version>1.0.0-beta</version>
+    </dependency>
   </dependencies>  
   <build> 
     <finalName>demo-01</finalName>  
